Revert "fix: 縦のみoverflowを許可"
This reverts commit ea117d55550ecdc114d789ef45a92ac5264b4820.

--- a/docs/common.css
+++ b/docs/common.css
@@ -47,7 +47,6 @@ body {
   letter-spacing: 1px;
   color: #541018;
   background: #f9cdd4; /* ベージュ #fcf5ed */
-  overflow-x: hidden;
 }
 
 img {
